Fix header positioning and update script parameters

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <script src="/_sdk/element_sdk.js" type="text/javascript"></script>
  </head>
  <body class="bg-gray-50 min-h-full">
-  <header class="gradient-bg text-white shadow-lg">
+  <header class="gradient-bg text-white shadow-lg fixed top-0 left-0 right-0 z-40 backdrop-blur-sm">
    <nav class="container mx-auto px-6 py-4">
     <div class="flex items-center justify-between">
      <div class="flex items-center space-x-4">
@@ -97,7 +97,7 @@
     </div>
    </nav>
   </header>
-  <main class="container mx-auto px-6 py-12"><!-- Sección Principal -->
+  <main class="container mx-auto px-6 py-12 pt-32"><!-- Sección Principal -->
    <section id="homeSection" class="fade-in"><!-- Hero Section -->
     <div class="relative overflow-hidden bg-gradient-to-br from-telos-purple via-telos-blue to-indigo-600 rounded-3xl shadow-2xl mb-20">
      <div class="absolute inset-0 bg-black opacity-10"></div>
@@ -1343,5 +1343,5 @@
             });
         });
     </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'996ab95dd2b0492b',t:'MTc2MTgyNTMzMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'996b0a8e44c2492b',t:'MTc2MTgyODY1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
