Update GitHub user and repository information

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
        </svg>
        <div>
         <p class="text-sm font-medium text-green-800" data-es="Repositorio configurado automáticamente" data-en="Repository configured automatically">Repositorio configurado automáticamente</p>
-        <p class="text-xs text-green-600" data-es="Usuario: danielmarcelo | Repositorio: compliance-bp-telos" data-en="User: danielmarcelo | Repository: compliance-bp-telos">Usuario: danielmarcelo | Repositorio: compliance-bp-telos</p>
+        <p class="text-xs text-green-600" data-es="Usuario: Daniel123951 | Repositorio: compliancebp-telos" data-en="User: Daniel123951 | Repository: compliancebp-telos">Usuario: Daniel123951 | Repositorio: compliancebp-telos</p>
        </div>
       </div>
      </div>
@@ -560,8 +560,8 @@
   <script>
         // Configuración de GitHub API
         const GITHUB_CONFIG = {
-            owner: 'danielmarcelo', // Tu usuario de GitHub (fijo)
-            repo: 'compliance-bp-telos', // Tu repositorio (fijo)
+            owner: 'Daniel123951', // Tu usuario de GitHub (fijo)
+            repo: 'compliancebp-telos', // Tu repositorio (fijo)
             token: '', // No necesario para lectura pública
             dataFile: 'data/reports-data.json'
         };
@@ -1728,5 +1728,5 @@
             });
         });
     </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997c7af481d4492b',t:'MTc2MjAxMTUxOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997c87e8a4be492b',t:'MTc2MjAxMjA0OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
